Tests/Snippets/PassParser.java
// $ANTLR 3.3 Nov 30, 2010 12:50:56 Pass.g 2012-04-28 00:16:40

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class PassParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "DEDENT", "INDENT", "GEN_OP", "LT", "ID", "CMP", "BOP", "NUMBER", "STRING", "ARITH_ASSIGN", "OP", "PROG", "RETURN", "FUNCTION", "ASSIGNMENT", "BREAK", "GENERIC_OP", "ARRAY_ACCESS", "DICTIONARY_DEFINITION", "DICT_ACCESS", "IF_CONDITIONS", "IF", "ELSE_IF", "ELSE", "WHILE", "FOR", "FUNC_CALL", "ARGUMENTS", "IBLOCK", "ARRAY_DECLARATION", "DICTIONARY_DECLARATION", "EXPONENT", "COMMENT", "WS", "ESC_SEQ", "HEX_DIGIT", "UNICODE_ESC", "OCTAL_ESC", "'('", "','", "')'", "'~'", "'break'", "'return'", "'+'", "'-'", "'*'", "'/'", "'%'", "'^'", "'['", "']'", "'.'", "'for'", "'in'", "'while'", "'if'", "'else if'", "'else'", "'='", "'{'", "'}'", "':'"
    };
    public static final int EOF=-1;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__59=59;
    public static final int T__60=60;
    public static final int T__61=61;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int T__66=66;
    public static final int DEDENT=4;
    public static final int INDENT=5;
    public static final int GEN_OP=6;
    public static final int LT=7;
    public static final int ID=8;
    public static final int CMP=9;
    public static final int BOP=10;
    public static final int NUMBER=11;
    public static final int STRING=12;
    public static final int ARITH_ASSIGN=13;
    public static final int OP=14;
    public static final int PROG=15;
    public static final int RETURN=16;
    public static final int FUNCTION=17;
    public static final int ASSIGNMENT=18;
    public static final int BREAK=19;
    public static final int GENERIC_OP=20;
    public static final int ARRAY_ACCESS=21;
    public static final int DICTIONARY_DEFINITION=22;
    public static final int DICT_ACCESS=23;
    public static final int IF_CONDITIONS=24;
    public static final int IF=25;
    public static final int ELSE_IF=26;
    public static final int ELSE=27;
    public static final int WHILE=28;
    public static final int FOR=29;
    public static final int FUNC_CALL=30;
    public static final int ARGUMENTS=31;
    public static final int IBLOCK=32;
    public static final int ARRAY_DECLARATION=33;
    public static final int DICTIONARY_DECLARATION=34;
    public static final int EXPONENT=35;
    public static final int COMMENT=36;
    public static final int WS=37;
    public static final int ESC_SEQ=38;
    public static final int HEX_DIGIT=39;
    public static final int UNICODE_ESC=40;
    public static final int OCTAL_ESC=41;

    // delegates
    // delegators


        public PassParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public PassParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return PassParser.tokenNames; }
    public String getGrammarFileName() { return "Pass.g"; }


    public static class prog_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "prog"
    // Pass.g:103:1: prog : block EOF -> ^( PROG block ) ;
    public final PassParser.prog_return prog() throws RecognitionException {
        PassParser.prog_return retval = new PassParser.prog_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token EOF2=null;
        PassParser.block_return block1 = null;


        Object EOF2_tree=null;
        RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleSubtreeStream stream_block=new RewriteRuleSubtreeStream(adaptor,"rule block");
        try {
            // Pass.g:103:5: ( block EOF -> ^( PROG block ) )
            // Pass.g:103:9: block EOF
            {
            pushFollow(FOLLOW_block_in_prog51);
            block1=block();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_block.add(block1.getTree());
            EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_prog53); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_EOF.add(EOF2);



            // AST REWRITE
            // elements: block
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 103:19: -> ^( PROG block )
            {
                // Pass.g:103:22: ^( PROG block )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(PROG, "PROG"), root_1);

                adaptor.addChild(root_1, stream_block.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "prog"

    public static class block_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "block"
    // Pass.g:106:1: block : ( LT )* ( stmt )* ;
    public final PassParser.block_return block() throws RecognitionException {
        PassParser.block_return retval = new PassParser.block_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token LT3=null;
        PassParser.stmt_return stmt4 = null;


        Object LT3_tree=null;

        try {
            // Pass.g:107:5: ( ( LT )* ( stmt )* )
            // Pass.g:107:9: ( LT )* ( stmt )*
            {
            root_0 = (Object)adaptor.nil();

            // Pass.g:107:9: ( LT )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==LT) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // Pass.g:107:9: LT
            	    {
            	    LT3=(Token)match(input,LT,FOLLOW_LT_in_block80); if (state.failed) return retval;
            	    if ( state.backtracking==0 ) {
            	    LT3_tree = (Object)adaptor.create(LT3);
            	    adaptor.addChild(root_0, LT3_tree);
            	    }

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            // Pass.g:107:13: ( stmt )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==ID||(LA2_0>=NUMBER && LA2_0<=STRING)||LA2_0==42||(LA2_0>=46 && LA2_0<=47)||LA2_0==57||(LA2_0>=59 && LA2_0<=60)) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // Pass.g:107:13: stmt
            	    {
            	    pushFollow(FOLLOW_stmt_in_block83);
            	    stmt4=stmt();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, stmt4.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "block"

    public static class stmt_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "stmt"
    // Pass.g:110:1: stmt : ( expr ( ( LT )+ | EOF ) | control ( LT )+ );
    public final PassParser.stmt_return stmt() throws RecognitionException {
        PassParser.stmt_return retval = new PassParser.stmt_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token LT6=null;
        Token EOF7=null;
        Token LT9=null;
        PassParser.expr_return expr5 = null;

        PassParser.control_return control8 = null;


        Object LT6_tree=null;
        Object EOF7_tree=null;
        Object LT9_tree=null;

        try {
            // Pass.g:110:5: ( expr ( ( LT )+ | EOF ) | control ( LT )+ )
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==ID||(LA6_0>=NUMBER && LA6_0<=STRING)||LA6_0==42||(LA6_0>=46 && LA6_0<=47)) ) {
                alt6=1;
            }
            else if ( (LA6_0==57||(LA6_0>=59 && LA6_0<=60)) ) {
                alt6=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;
            }
            switch (alt6) {
                case 1 :
                    // Pass.g:110:9: expr ( ( LT )+ | EOF )
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_expr_in_stmt102);
                    expr5=expr();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, expr5.getTree());
                    // Pass.g:110:14: ( ( LT )+ | EOF )
                    int alt4=2;
                    int LA4_0 = input.LA(1);

                    if ( (LA4_0==LT) ) {
                        alt4=1;
                    }
                    else if ( (LA4_0==EOF) ) {
                        alt4=2;
                    }
                    else {
                        if (state.backtracking>0) {state.failed=true; return retval;}
                        NoViableAltException nvae =
                            new NoViableAltException("", 4, 0, input);

                        throw nvae;
                    }
                    switch (alt4) {
                        case 1 :
                            // Pass.g:110:15: ( LT )+
                            {
                            // Pass.g:110:15: ( LT )+
                            int cnt3=0;
                            loop3:
                            do {
                                int alt3=2;
                                int LA3_0 = input.LA(1);

                                if ( (LA3_0==LT) ) {
                                    alt3=1;
                                }


                                switch (alt3) {
                            	case 1 :
                            	    // Pass.g:110:15: LT
                            	    {
                            	    LT6=(Token)match(input,LT,FOLLOW_LT_in_stmt105); if (state.failed) return retval;
                            	    if ( state.backtracking==0 ) {
                            	    LT6_tree = (Object)adaptor.create(LT6);
                            	    adaptor.addChild(root_0, LT6_tree);
                            	    }

                            	    }
                            	    break;

                            	default :
                            	    if ( cnt3 >= 1 ) break loop3;
                            	    if (state.backtracking>0) {state.failed=true; return retval;}
                                        EarlyExitException eee =
                                            new EarlyExitException(3, input);
                                        throw eee;
                                }
                                cnt3++;
                            } while (true);


                            }
                            break;
                        case 2 :
                            // Pass.g:110:19: EOF
                            {
                            EOF7=(Token)match(input,EOF,FOLLOW_EOF_in_stmt108); if (state.failed) return retval;
                            if ( state.backtracking==0 ) {
                            EOF7_tree = (Object)adaptor.create(EOF7);
                            adaptor.addChild(root_0, EOF7_tree);
                            }

                            }
                            break;

                    }


                    }
                    break;
                case 2 :
                    // Pass.g:111:9: control ( LT )+
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_control_in_stmt119);
                    control8=control();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, control8.getTree());
                    // Pass.g:111:17: ( LT )+
                    int cnt5=0;
                    loop5:
                    do {
                        int alt5=2;
                        int LA5_0 = input.LA(1);

                        if ( (LA5_0==LT) ) {
                            alt5=1;
                        }


                        switch (alt5) {
                    	case 1 :
                    	    // Pass.g:111:17: LT
                    	    {
                    	    LT9=(Token)match(input,LT,FOLLOW_LT_in_stmt121); if (state.failed) return retval;
                    	    if ( state.backtracking==0 ) {
                    	    LT9_tree = (Object)adaptor.create(LT9);
                    	    adaptor.addChild(root_0, LT9_tree);
                    	    }

                    	    }
                    	    break;

                    	default :
                    	    if ( cnt5 >= 1 ) break loop5;
                    	    if (state.backtracking>0) {state.failed=true; return retval;}
                                EarlyExitException eee =
                                    new EarlyExitException(5, input);
                                throw eee;
                        }
                        cnt5++;
                    } while (true);


                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "stmt"

    public static class iblock_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "iblock"
    // Pass.g:114:1: iblock : INDENT block DEDENT -> ^( IBLOCK block ) ;
    public final PassParser.iblock_return iblock() throws RecognitionException {
        PassParser.iblock_return retval = new PassParser.iblock_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token INDENT10=null;
        Token DEDENT12=null;
        PassParser.block_return block11 = null;


        Object INDENT10_tree=null;
        Object DEDENT12_tree=null;
        RewriteRuleTokenStream stream_DEDENT=new RewriteRuleTokenStream(adaptor,"token DEDENT");
        RewriteRuleTokenStream stream_INDENT=new RewriteRuleTokenStream(adaptor,"token INDENT");
        RewriteRuleSubtreeStream stream_block=new RewriteRuleSubtreeStream(adaptor,"rule block");
        try {
            // Pass.g:115:5: ( INDENT block DEDENT -> ^( IBLOCK block ) )
            // Pass.g:115:9: INDENT block DEDENT
            {
            INDENT10=(Token)match(input,INDENT,FOLLOW_INDENT_in_iblock148); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_INDENT.add(INDENT10);

            pushFollow(FOLLOW_block_in_iblock150);
            block11=block();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_block.add(block11.getTree());
            DEDENT12=(Token)match(input,DEDENT,FOLLOW_DEDENT_in_iblock152); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_DEDENT.add(DEDENT12);



            // AST REWRITE
            // elements: block
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 115:29: -> ^( IBLOCK block )
            {
                // Pass.g:115:32: ^( IBLOCK block )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(IBLOCK, "IBLOCK"), root_1);

                adaptor.addChild(root_1, stream_block.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "iblock"

    public static class args_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "args"
    // Pass.g:118:1: args : '(' ( argument ( ',' argument )* )? ( ( LT )+ )? ')' -> ^( ARGUMENTS ( argument )* ) ;
    public final PassParser.args_return args() throws RecognitionException {
        PassParser.args_return retval = new PassParser.args_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal13=null;
        Token char_literal15=null;
        Token LT17=null;
        Token char_literal18=null;
        PassParser.argument_return argument14 = null;

        PassParser.argument_return argument16 = null;


        Object char_literal13_tree=null;
        Object char_literal15_tree=null;
        Object LT17_tree=null;
        Object char_literal18_tree=null;
        RewriteRuleTokenStream stream_LT=new RewriteRuleTokenStream(adaptor,"token LT");
        RewriteRuleTokenStream stream_43=new RewriteRuleTokenStream(adaptor,"token 43");
        RewriteRuleTokenStream stream_44=new RewriteRuleTokenStream(adaptor,"token 44");
        RewriteRuleTokenStream stream_42=new RewriteRuleTokenStream(adaptor,"token 42");
        RewriteRuleSubtreeStream stream_argument=new RewriteRuleSubtreeStream(adaptor,"rule argument");
        try {
            // Pass.g:118:5: ( '(' ( argument ( ',' argument )* )? ( ( LT )+ )? ')' -> ^( ARGUMENTS ( argument )* ) )
            // Pass.g:118:9: '(' ( argument ( ',' argument )* )? ( ( LT )+ )? ')'
            {
            char_literal13=(Token)match(input,42,FOLLOW_42_in_args174); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_42.add(char_literal13);

            // Pass.g:118:13: ( argument ( ',' argument )* )?
            int alt8=2;
            int LA8_0 = input.LA(1);

            if ( (LA8_0==LT) ) {
                int LA8_1 = input.LA(2);

                if ( (LA8_1==ID||(LA8_1>=NUMBER && LA8_1<=STRING)||LA8_1==42) ) {
                    alt8=1;
                }
            }
            else if ( (LA8_0==ID||(LA8_0>=NUMBER && LA8_0<=STRING)||LA8_0==42) ) {
                alt8=1;
            }
            switch (alt8) {
                case 1 :
                    // Pass.g:118:14: argument ( ',' argument )*
                    {
                    pushFollow(FOLLOW_argument_in_args177);
                    argument14=argument();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_argument.add(argument14.getTree());
                    // Pass.g:118:23: ( ',' argument )*
                    loop7:
                    do {
                        int alt7=2;
                        int LA7_0 = input.LA(1);

                        if ( (LA7_0==43) ) {
                            alt7=1;
                        }


                        switch (alt7) {
                    	case 1 :
                    	    // Pass.g:118:24: ',' argument
                    	    {
                    	    char_literal15=(Token)match(input,43,FOLLOW_43_in_args180); if (state.failed) return retval; 
                    	    if ( state.backtracking==0 ) stream_43.add(char_literal15);

                    	    pushFollow(FOLLOW_argument_in_args182);
                    	    argument16=argument();

                    	    state._fsp--;
                    	    if (state.failed) return retval;
                    	    if ( state.backtracking==0 ) stream_argument.add(argument16.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop7;
                        }
                    } while (true);


                    }
                    break;

            }

            // Pass.g:118:41: ( ( LT )+ )?
            int alt10=2;
            int LA10_0 = input.LA(1);

            if ( (LA10_0==LT) ) {
                alt10=1;
            }
            switch (alt10) {
                case 1 :
                    // Pass.g:118:42: ( LT )+
                    {
                    // Pass.g:118:42: ( LT )+
                    int cnt9=0;
                    loop9:
                    do {
                        int alt9=2;
                        int LA9_0 = input.LA(1);

                        if ( (LA9_0==LT) ) {
                            alt9=1;
                        }


                        switch (alt9) {
                    	case 1 :
                    	    // Pass.g:118:42: LT
                    	    {
                    	    LT17=(Token)match(input,LT,FOLLOW_LT_in_args189); if (state.failed) return retval; 
                    	    if ( state.backtracking==0 ) stream_LT.add(LT17);


                    	    }
                    	    break;

                    	default :
                    	    if ( cnt9 >= 1 ) break loop9;
                    	    if (state.backtracking>0) {state.failed=true; return retval;}
                                EarlyExitException eee =
                                    new EarlyExitException(9, input);
                                throw eee;
                        }
                        cnt9++;
                    } while (true);


                    }
                    break;

            }

            char_literal18=(Token)match(input,44,FOLLOW_44_in_args193); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_44.add(char_literal18);



            // AST REWRITE
            // elements: argument
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 118:51: -> ^( ARGUMENTS ( argument )* )
            {
                // Pass.g:118:54: ^( ARGUMENTS ( argument )* )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(ARGUMENTS, "ARGUMENTS"), root_1);

                // Pass.g:118:66: ( argument )*
                while ( stream_argument.hasNext() ) {
                    adaptor.addChild(root_1, stream_argument.nextTree());

                }
                stream_argument.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "args"

    public static class func_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };
